tests/ui/typeck/recursive_function_parameter.stderr
error: recursive struct definition
  --> ROOT/tests/ui/typeck/recursive_function_parameter.sol:LL:CC
   |
LL |       struct A {
   |  _____^
LL | |         B b;
LL | |     }
   | |_____^
   |

error: recursive struct definition
  --> ROOT/tests/ui/typeck/recursive_function_parameter.sol:LL:CC
   |
LL |       struct B {
   |  _____^
LL | |         A a;
LL | |     }
   | |_____^
   |

error: recursive types cannot be parameter or return types of public functions
  --> ROOT/tests/ui/typeck/recursive_function_parameter.sol:LL:CC
   |
LL |     function c1(C) public {}
   |                 ^
   |

error: recursive types cannot be parameter or return types of public functions
  --> ROOT/tests/ui/typeck/recursive_function_parameter.sol:LL:CC
   |
LL |     function c2() public returns(C) {}
   |                                  ^
   |

error: aborting due to 4 previous errors

